--- a/InvertedPendulum/LAFEM_Exp2.org
+++ b/InvertedPendulum/LAFEM_Exp2.org
@@ -101,8 +101,8 @@ int main( void ){
   }
   gsl_matrix_free( D_expert );
   
-  g_iMax_episode_len = 300;
-  D_expert = inverted_pendulum_simulator( 10 );
+  g_iMax_episode_len = 1000;
+  D_expert = inverted_pendulum_simulator( 3 );
   FILE* f = fopen("D_expert.mat","w");
   for( int i = 0; i < D_expert->size1 ; i++ ){
     for( int j = 0; j < TRANS_WIDTH; j++){
@@ -295,11 +295,11 @@ class LAFEM_Exp2( LAFEM ):
         return (zeros((1,10)) + mu_a[l2str( s )]).transpose() #Ugly hack to get a column vector and not a line vector
 
     def alpha( self, t ):
-        return 0.1
+        return 10./(t+1.)
 
-    omega_0 = zeros( (10, 1) ) - 1.
+    theta_0 = zeros( (10, 1) ) - 1.
 
-    T = 20
+    Threshold = 0.1
 #+end_src
 
 *** Running LAFEM
