--- a/Highway/Main.org
+++ b/Highway/Main.org
@@ -1,101 +1,52 @@
 #+TITLE:Setup for the Highway driving experiment
 
 * Espace d'état, espace d'action
+  Nous utilisons la paramétrisation fournie par Syed. A savoir :
+
   Chaque vecteur d'état contient les informations suivantes : 
+  - vitesse
   - position horizontale de la voiture bleue (celle conduite par le joueur)
   - position horitontale et verticale de la voiture rouge (celle que le joueur doit éviter)
-  - nombre de collisions et de sorties de route
 
-  On se limite à la vitesse la plus basse car le jeu est injouable pour un humain aux vitesses plus importantes. On verra si on peut faire du task transfer plus tard.
+  Les actions sont aux nombre de cinq, correspondant sémantiquement à /aller à droite/, /aller à gauche/, /aralentir/, /accélérer/ et /ne rien changer/. Toutefois, une fois la vitesse choisie lors de la première transition où les actions sont /ralentir/, /accélérer/ ou /ne rien changer/, l'agent ne peut changer à nouveau sa vitesse et les seules actions qui lui sont accessibles sont /aller à gauche/, /aller à droite/ et /ne rien changer/. Tout cela ne correspond pas au cadre habituel dans lequel nous évoluons. Je ne sais pas encore comment on va bidouiller ça, mais il va falloir le prendre en compte.
 
-  Les actions sont aux nombre de trois : gauche, rien et droite, représentées respectivement par les entiers 0, 1 et 2.
-
-  L'espace d'état est ainsi de dimension 5 : 
-  \begin{equation}
-  \begin{pmatrix}
-  x_b\\
-  x_r\\
-  y_r\\
-  c\\
-  o
-  \end{pmatrix}
-  \end{equation}
-
-  L'espace d'action de dimension 1.
 * Feature space
   Afin de pouvoir utiliser une approximation linéaire de la fonction de valeur, on va définir deux fonctions de base vectorielles $\phi: S\times A \rightarrow \mathbb{R}^k$ and $\phi: S\rightarrow \mathbb{R}^p$.
 
-  La définition de ces fonctions utilise un classique maillage de gaussiennes pour la partie de l'état correspondant aux positions des voitures. Pour l'espace joint états actions, on démultiplie l'espace d'état comme cela est fait pour le pendule inversé.
-
-  La dimension horizontale pour la voiture du joueur est divisée en 5, les centre des gaussiennes est positionné sur le milieu de chaque voie ainsi qu'aux coordonnées correspondant aux bas côtés droit gauche. Du bas-côté gauche au bas côté droit en passant successivment par les trois voies, les coordonnées correspondantes sont : 120, 140, 160, 180 et 200.
-
-  En ce qui concerne les voitures que le joueur doit éviter, la dimension horizontale sera divisée en 3, avec une gaussienne pour chaque voie, de centres 140, 160 et 180. La dimension verticale, bien que plus étendue, ne sera divisée qu'en 3 également, avec le centre des gaussiennes en 60, 120 et 180
-
-  Les deux dernières composantes de l'espace d'état, à savoir le nombre de collisions $c$ et le nombre de sorties de route $o$ ne sont pas projetées sur des gaussiennes. Elles sont laissées telles quelles afin de permettre une expression de la récompense linéaire par rapport à ces quantités.
-
-  Concrètement, l'on obtient les fonctions vectorielle :
+  On utilise comme features sur l'espace d'état : 
 \begin{eqnarray}
-\psi  \begin{pmatrix}
-  x_b\\
-  x_r\\
-  y_r\\
-  c\\
-  o
-  \end{pmatrix} &=& 
-  \begin{pmatrix}
-  exp({- (x_b-120)^2\over 2\cdot 20^2})\\
-  exp({- (x_b-140)^2\over 2\cdot 20^2})\\
-  exp({- (x_b-160)^2\over 2\cdot 20^2})\\
-  exp({- (x_b-180)^2\over 2\cdot 20^2})\\
-  exp({- (x_b-200)^2\over 2\cdot 20^2})\\
-  exp({- ((x_r-140)^2 + (y_r - 60)^2)\over 2\cdot 20^2})\\  
-  exp({- ((x_r-140)^2 + (y_r - 120)^2)\over 2\cdot 20^2})\\  
-  exp({- ((x_r-140)^2 + (y_r - 180)^2)\over 2\cdot 20^2})\\  
-  exp({- ((x_r-160)^2 + (y_r - 60)^2)\over 2\cdot 20^2})\\  
-  exp({- ((x_r-160)^2 + (y_r - 120)^2)\over 2\cdot 20^2})\\  
-  exp({- ((x_r-160)^2 + (y_r - 180)^2)\over 2\cdot 20^2})\\  
-  exp({- ((x_r-180)^2 + (y_r - 60)^2)\over 2\cdot 20^2})\\  
-  exp({- ((x_r-180)^2 + (y_r - 120)^2)\over 2\cdot 20^2})\\  
-  exp({- ((x_r-180)^2 + (y_r - 180)^2)\over 2\cdot 20^2})\\  
-  c\\
-  o
-  \end{pmatrix}\\
-\phi  \begin{pmatrix}
-  x_b~~\\
-  x_r~~\\
-  y_r,a\\
-  c~~~\\
-  o~~~
-  \end{pmatrix} &=& 
+\psi &:& S\rightarrow \mathbb{R}^3\\
+\psi(s) &=& \begin{pmatrix}
+v\\c\\o
+\end{pmatrix} \in \{0,0.75,1\}\times \{0,0.5\}\times\{0,0.5\}
+\end{eqnarray}
+Telle que définie dans =al_code/features.pl=. Une lecture du code perl de Syed livre l'analyse suivante : 
+- $v$ est la vitesse normalisée, qui vaut $0$ pour la vitesse la plus basse, $0.75$ pour la vitesse médiane et $1$ pour la vitesse la plus haute
+- $c$ est le détecteur de collisions, qui vaut $0.5$ lorsqu'il n'y a /pas/ de collisions, $0$ lorsqu'il y en a.
+- $o$ est le détecteur de sorties de route, qui vaut $0.5$ lorsqu'il y a une sortie de route et $0$ lorsque l'on reste sur la route.
+
+
+Sur l'espace joit état-action, nous utilisons la factorisation des features. Nous considérons pour résoudre la difficulté mentionnée plus haut que seule trois actions (numérotées $0,1$ et $2$) sont disponibles pour chaque état. Leur signification change selon que l'on soit dans l'état initial ou non, mais cela ne devrait pas poser de problèmes car les algorithmes que nous utilisons sont agnistiques à la signification des symboles manipulés.
+
+  \begin{eqnarray}
+\phi(s,a ) &=& 
   \begin{pmatrix}
   \psi(s)\\
   0\\
   \vdots\\
   0
   \end{pmatrix}\textrm{si }a = 0\\
-\phi  \begin{pmatrix}
-  x_b~~\\
-  x_r~~\\
-  y_r,a\\
-  c~~~\\
-  o~~~
-  \end{pmatrix} &=& 
+\phi(s,a) &=& 
   \begin{pmatrix}
   0\\
-  \vdots\\
+  0\\
   0\\
   \psi(s)\\
   0\\
-  \vdots\\
+  0\\
   0
   \end{pmatrix}\textrm{si }a = 1\\
-\phi  \begin{pmatrix}
-  x_b~~\\
-  x_r~~\\
-  y_r,a\\
-  c~~~\\
-  o~~~
-  \end{pmatrix} &=& 
+\phi(s,a)&=& 
   \begin{pmatrix}
   0\\
   \vdots\\
@@ -104,8 +55,63 @@
   \end{pmatrix}\textrm{si }a = 2\\
 \end{eqnarray}
 
+Ces fonctions de base sont recodées en python afin de pouvoir calculer la /feature expectation/ à partir de transitions. /Feature expectation/ qui sera fournie en entrée à MWAL.
 
-  Ces fonction vectorielles $\phi$ et $\psi$ sont codées d'une part en C car LSPI et STD$\mu$ en ont besoin pour fonctionner et en python pour $\phi$ d'autre part car SCIRL/LAFEM en a besoin pour utiliser les informations données par LSTD$\mu$, et le jeu en a besoin pour évaluer les différentes actions afin de choisir la meilleure.
+
+** Implémentation en python
+#+begin_src python :tangle phipsi.py
+from numpy import *
+
+def psi( s ): #See al_code/features.pl and al_code/my_constants.pl to see where all this is from
+    answer = zeros((3,1))
+    speed = s[0]
+    blue_x = s[1]
+    red_x = s[2]
+    red_y = s[3]
+
+    #Special case of the first transition, see al_code/features.pl:4 for what Syed does and MWAL.org about the Play*_stripped.dat Makefile rule. Basically we detect the first transition for which the red car coordinates are 0,0 and associate it with the feature 0.75,0.5,0.5 as Syed does.
+    if red_x == 0 and red_y == 0:
+        answer[0] = 0.75
+        answer[1] = 0.5
+        answer[2] = 0.5
+        return answer
+
+    answer[0] = (speed /2. + 1.)/2.
+
+    blue_x1 = blue_x - 20 + 1
+    blue_x2 = blue_x - 1
+    blue_y1 = ((160+20) - 10) - 40 +1
+    blue_y2 = (160+20) - 10 - 1
+
+    red_x1 = red_x - 20
+    red_x2 = red_x
+    red_y1 = red_y - 40
+    red_y2 = red_y
+    
+    eastmost_x1 = ( blue_x1 if blue_x1 > red_x1 else red_x1 )
+    westmost_x2 = ( blue_x2 if blue_x2 < red_x2 else red_x2 )
+    southmost_y1 = ( blue_y1 if blue_y1 > red_y1 else red_y1 )
+    northmost_y2 = ( blue_y2 if blue_y2 < red_y2 else red_y2 )
+
+    if eastmost_x1 > westmost_x2 or southmost_y1 > northmost_y2 :
+        answer[1] = 0.5
+    else:
+        answer[1] = 0
+
+    if blue_x < 120+20 or blue_x > 200-20:
+        answer[2] = 0
+    else:
+        answer[2] = 0.5
+
+    return answer
+
+def phi( s, a ):
+    answer = zeros((9,1))
+    index = a*3
+    answer[index:index+3] = psi( s )
+    return answer
+
+#+end_src
 
 ** Implémentation en C
    Une fois les notations mathématiques correctement établies comme ci dessus, l'implémentation à l'aide de la GSL est assez directe. Une des petites subtilités est que le vecteur, écrit en colonne dans les notation matheuses sera passé en ligne car lu dans les transitions.
@@ -175,43 +181,6 @@ phipsi.o: phipsi.c phipsi.h
 	$(call c2obj,"phipsi.c")
 #+end_src
 
-
-** Implémentation en python
-#+begin_src python :tangle phi.py
-from numpy import *
-
-def psi( s ):
-    answer = zeros((9,1))
-    blue_x = s[0]
-    red_x = s[1]
-    red_y = s[2]
-    collisions = s[3]
-    offroads = s[4]
-    index = 0
-    for x in [120.,140.,160.,180.,200.]:
-        answer[index] = exp( - pow(blue_x - x, 2) / (2.*20.*20.) )
-        index+=1
-    answer[index] = red_y - 160.
-    index+=1
-    if( -20.<red_x-blue_x or red_x - blue_x < 20. ):
-        answer[index] = 1
-    else:
-        answer[index] = -1
-    index+=1
-    answer[index] = collisions
-    index+=1
-    answer[index] = offroads
-    return answer
-
-def phi( s, a ):
-    answer = zeros((27,1))
-    index = a*9
-    answer[index:index+9] = psi( s )
-    return answer
-
-        
-
-#+end_src
 
 * Reinforcement learning
 ** Running LSPI
